--- a/index.html.html
+++ b/index.html.html
@@ -5,105 +5,7 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@1,300&family=Dosis:wght@300&display=swap"
         rel="stylesheet">
-    <title>Campo Minado</title>
-    <style>
-        * {
-            margin: 0px;
-            padding: 0px;
-            user-select: none;
-        }
-
-        body {
-            background-color: #9d5600b1;
-        }
-
-        header {
-            display: block;
-            background-color: #794300;
-            padding: 1.6%;
-            font-family: 'Dosis';
-        }
-
-        table {
-            height: 650px;
-            width: 650px;
-
-            margin: auto;
-            border-spacing: 0;
-            border: 25px solid #54ac28;
-            background-color: #54ac28;
-
-            position: absolute;
-            left: 50%;
-            top: 54.5%;
-            transform: translate(-50%, -50%);
-
-        }
-
-        td {
-            width: 6%;
-            height: 6%;
-
-            background-color: #7bcc53;
-            border: 3px solid #54ac28;
-            cursor: pointer;
-            text-align: center;
-            font-size: 15px;
-            font-family: 'Dosis';
-            font-weight: bold;
-        }
-
-        td:hover {
-            background-color: #9cf072;
-        }
-
-        .bandeirinha {
-            background-image: url('bandeira.png');
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
-
-        .bomba {
-            background-image: url('bomba.png');
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
-
-        .aberto {
-            background-color: #deffcd;
-        }
-
-        .inputBtn {
-            background-color: #794300;
-            color: white;
-            border: none;
-            border: .5px solid white;
-            transform: translateX(70px);
-        }
-
-        .labelBomba {
-
-            color: white;
-            position: absolute;
-            top: 25px;
-        }
-
-        #inputNum {
-            width: 40px;
-            border: none;
-        }
-
-        .inputBtn,
-        #inputNum {
-            padding: 5px;
-            font-family: 'Dosis';
-            display: inline-block;
-            position: absolute;
-            top: 50px;
-            outline: none;
-
-        }
-    </style>
+        <link rel="stylesheet" href="style.css">
 </head>
 
 <body id="body">
@@ -123,282 +25,7 @@
 
         </div>
     </div>
-
-
-    <script>
-        const qtdLinhas = 15;
-        const qtdColunas = 15;
-        let qtdBombas = 30;
-
-        let quadradosCanto = [];
-        let quadradosBordaEsquerda = [];
-        let quadradosBordaDireita = [];
-        let quadradosBordaCima = [];
-        let quadradosBordaBaixo = [];
-        let idsBombas = [];
-        let primeiroClique = true;
-
-        let grid = document.getElementById('grid');
-
-        populaPosicaoQuadrados();
-        criaBombas();
-        criaTabela();
-
-        document.addEventListener("contextmenu", function (event) {
-            event.preventDefault();
-            let elemento = event.target;
-            if (elemento.classList.contains('bandeirinha')) {
-                elemento.classList.remove('bandeirinha');
-            } else if (!elemento.classList.contains('aberto')) {
-                elemento.classList.add('bandeirinha');
-            }
-        });
-
-
-
-        function criaTabela() {
-            for (let i = 0; i < qtdLinhas; i++) {
-                let linha = document.createElement('tr');
-
-                for (let j = 0; j < qtdColunas; j++) {
-                    let coluna = document.createElement('td');
-                    let id = 1 + (j) + (qtdColunas * i);
-                    coluna.onclick = function () {
-                        var el = document.getElementById(id);
-                        if (!el.classList.contains("bandeirinha")) {
-                            verificaPosicao(id);
-                        }
-                    }
-
-                    coluna.id = id;
-                    // coluna.innerHTML = retornaQuantidadeBombasRedor(id);
-
-                    linha.appendChild(coluna);
-
-                }
-
-                grid.appendChild(linha);
-            }
-        }
-
-        document.querySelector("#inputAtualiza").addEventListener('click', function() {
-            debugger
-            var numBombas = Number(document.getElementById("inputNum").value);
-            qtdBombas = numBombas;
-            grid.innerHTML = "";
-            populaPosicaoQuadrados();
-            criaBombas();
-            criaTabela();
-        });
-
-        function criaBombas() {
-            idsBombas = geraNumerosAleatorios(qtdBombas, 1, (qtdLinhas * qtdColunas));
-        }
-
-        // function coloreBombas() {
-        //     for (let i = 0; i < idsBombas.length; i++) {
-        //         let quadrado = document.getElementById(idsBombas[i]);
-
-        //         quadrado.style.backgroundColor = 'white';
-        //     }
-        // }
-
-        function geraNumerosAleatorios(quantidadeNumeros, numeroInicial, numeroFinal) {
-            let numeros = new Set();
-
-            while (numeros.size < quantidadeNumeros) {
-                let numero = Math.floor(Math.random() * (numeroFinal - numeroInicial + 1)) + numeroInicial;
-                numeros.add(numero);
-            }
-
-            return Array.from(numeros);
-        }
-
-        function retornaPosicoesRedorQuadrado(id) {
-            let posicoesRedorQuadrado = new Array(8);
-
-            if (quadradosCanto.includes(id)) {
-                let index = quadradosCanto.indexOf(id);
-                switch (index) {
-                    case 0:
-                        posicoesRedorQuadrado[4] = id + 1;
-                        posicoesRedorQuadrado[6] = id + qtdColunas;
-                        posicoesRedorQuadrado[7] = id + (qtdColunas + 1);
-                        break;
-
-                    case 1:
-                        posicoesRedorQuadrado[3] = id - 1;
-                        posicoesRedorQuadrado[5] = id + (qtdColunas - 1);
-                        posicoesRedorQuadrado[6] = id + qtdColunas;
-                        break;
-
-                    case 2:
-                        posicoesRedorQuadrado[1] = id - qtdColunas;
-                        posicoesRedorQuadrado[2] = id - (qtdColunas - 1);
-                        posicoesRedorQuadrado[4] = id + 1;
-                        break;
-
-                    case 3:
-                        posicoesRedorQuadrado[0] = id - (qtdColunas + 1);
-                        posicoesRedorQuadrado[1] = id - qtdColunas;
-                        posicoesRedorQuadrado[3] = id - 1;
-                        break;
-
-                    default:
-                        break;
-                }
-            } else if (quadradosBordaCima.includes(id)) {
-                posicoesRedorQuadrado[3] = id - 1;
-                posicoesRedorQuadrado[4] = id + 1;
-                posicoesRedorQuadrado[5] = id + (qtdColunas - 1);
-                posicoesRedorQuadrado[6] = id + qtdColunas;
-                posicoesRedorQuadrado[7] = id + (qtdColunas + 1);
-
-            } else if (quadradosBordaDireita.includes(id)) {
-                posicoesRedorQuadrado[0] = id - (qtdColunas + 1);
-                posicoesRedorQuadrado[1] = id - qtdColunas;
-                posicoesRedorQuadrado[3] = id - 1;
-                posicoesRedorQuadrado[5] = id + (qtdColunas - 1);
-                posicoesRedorQuadrado[6] = id + qtdColunas;
-
-            } else if (quadradosBordaEsquerda.includes(id)) {
-                posicoesRedorQuadrado[1] = id - qtdColunas;
-                posicoesRedorQuadrado[2] = id - (qtdColunas - 1);
-                posicoesRedorQuadrado[4] = id + 1;
-                posicoesRedorQuadrado[6] = id + qtdColunas;
-                posicoesRedorQuadrado[7] = id + (qtdColunas + 1);
-
-            } else if (quadradosBordaBaixo.includes(id)) {
-                posicoesRedorQuadrado[0] = id - (qtdColunas + 1);
-                posicoesRedorQuadrado[1] = id - qtdColunas;
-                posicoesRedorQuadrado[2] = id - (qtdColunas - 1);
-                posicoesRedorQuadrado[3] = id - 1;
-                posicoesRedorQuadrado[4] = id + 1;
-            } else {
-                posicoesRedorQuadrado[0] = id - (qtdColunas + 1);
-                posicoesRedorQuadrado[1] = id - qtdColunas;
-                posicoesRedorQuadrado[2] = id - (qtdColunas - 1);
-                posicoesRedorQuadrado[3] = id - 1;
-                posicoesRedorQuadrado[4] = id + 1;
-                posicoesRedorQuadrado[5] = id + (qtdColunas - 1);
-                posicoesRedorQuadrado[6] = id + qtdColunas;
-                posicoesRedorQuadrado[7] = id + (qtdColunas + 1);
-            }
-
-            return posicoesRedorQuadrado;
-        }
-
-        function retornaQuantidadeBombasRedor(id) {
-            let posicoesRedorQuadrado = retornaPosicoesRedorQuadrado(id);
-            let listaComum = idsBombas.filter(x => posicoesRedorQuadrado.includes(x));
-
-            return listaComum.length;
-        }
-
-        function populaPosicaoQuadrados() {
-
-            let ids = Array.from({ length: (qtdColunas * qtdLinhas) }, (_, i) => i + 1);
-
-            quadradosCanto = [1, qtdColunas, (qtdLinhas * qtdColunas - (qtdColunas - 1)), qtdLinhas * qtdColunas];
-            quadradosBordaCima = ids.filter(x => x < qtdColunas && x > 1);
-            quadradosBordaDireita = ids.filter(x => x % qtdColunas == 0 && x > qtdColunas && x < (qtdColunas * qtdLinhas));
-            quadradosBordaEsquerda = ids.filter(x => x % qtdColunas == 1 && x > qtdColunas && x < (qtdColunas * qtdLinhas - qtdColunas));
-            quadradosBordaBaixo = ids.filter(x => x > ((qtdColunas * qtdLinhas) - qtdColunas + 1) && x < qtdColunas * qtdLinhas);
-
-        }
-
-        function verificaPosicao(id) {
-
-            if (primeiroClique && idsBombas.includes(id)) {
-                while (idsBombas.includes(id)) {
-                    criaBombas();
-                }
-            }
-            primeiroClique = false;
-            let posicao = document.getElementById(id);
-            let qtdBombasRedor = retornaQuantidadeBombasRedor(id);
-            if (idsBombas.includes(id)) {
-                gameOver();
-                primeiroClique = true;
-                posicao.style.backgroundColor = '#b30000';
-            } else {
-
-                if (qtdBombasRedor == 0) {
-                    abreQuadradosRedor(id);
-                }
-
-                posicao.style.backgroundColor = 'white';
-                posicao.innerHTML = qtdBombasRedor;
-                posicao.classList.add('aberto');
-
-                verificaVitoria();
-            }
-
-        }
-
-        function gameOver() {
-
-            for (let i = 0; i < idsBombas.length; i++) {
-                let bomba = document.getElementById(idsBombas[i]);
-                bomba.classList.add('bomba');
-            }
-            setTimeout(() => {
-
-                if (!alert('Game Over')) {
-                    grid.innerHTML = "";
-                    populaPosicaoQuadrados();
-                    criaBombas();
-                    criaTabela();
-                }
-            }, 500)
-
-        }
-
-        function abreQuadradosRedor(id) {
-            let posicoesRedorQuadrado = retornaPosicoesRedorQuadrado(id).filter(function (element) {
-                return element !== "" && element !== null && element !== undefined;
-            });
-            let qtdBombasRedor = 0;
-
-            for (let i = 0; i < posicoesRedorQuadrado.length; i++) {
-                let posicao = document.getElementById(posicoesRedorQuadrado[i]);
-                qtdBombasRedor = retornaQuantidadeBombasRedor(posicoesRedorQuadrado[i]);
-                if (!idsBombas.includes(id) && !posicao.classList.contains('aberto')) {
-
-                    posicao.classList.remove('bandeirinha');
-                    posicao.style.backgroundColor = 'white';
-                    posicao.innerHTML = qtdBombasRedor;
-                    posicao.classList.add('aberto');
-
-                    if (qtdBombasRedor == 0) {
-                        abreQuadradosRedor(posicoesRedorQuadrado[i]);
-                    }
-
-                }
-            }
-        }
-
-        function verificaVitoria() {
-            let quantidadeAbertos = document.querySelectorAll('.aberto').length;
-            if (quantidadeAbertos == (qtdColunas * qtdLinhas - idsBombas.length)) {
-                primeiroClique = true;
-                for (let i = 0; i < idsBombas.length; i++) {
-                    let bomba = document.getElementById(idsBombas[i]);
-                    bomba.classList.add('bomba');
-                }
-                setTimeout(() => {
-
-                    if (!alert('Win')) {
-                        grid.innerHTML = "";
-                        populaPosicaoQuadrados();
-                        criaBombas();
-                        criaTabela();
-                    }
-                }, 500)
-            }
-        }
-
-    </script>
 </body>
 
 </html>
+<script src="script.js"></script>
